it/ls/prometheus/luan/alertmanager-ingress.yaml
---
# Source: grafana/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: luan-alertmanager
  namespace: luan-prom
  labels: {}
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
      - luan-alertmanager.ls.lsst.org
      secretName: luan-alertmanager-tls
  rules:
  - host: luan-alertmanager.ls.lsst.org
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: alertmanager-operated
              port:
                number: 9093
